eclipse-workspace/Surya Dev Org/src/objects/Account_Info__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Opened_On__c</fullName>
        <label>Account Opened On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account Info</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Account_Opened_On__c</columns>
        <columns>Account_Type__c</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Banking_List_View</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Account_Type__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <label>Banking List View</label>
    </listViews>
    <nameField>
        <displayFormat>ACC-{0000000000}</displayFormat>
        <label>Account Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>